updated rp version